--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -18,6 +20,13 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        kapt {
+            arguments {
+                arg("dagger.hilt.android.entryPoint", "com.example.moviesappjetpack.MyApp")
+            }
+        }
+
     }
 
     buildTypes {
@@ -53,7 +62,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'io.github.cdimascio:dotenv-kotlin:6.4.1'
-    implementation "io.insert-koin:koin-androidx-compose:3.4.5"
+    implementation "com.google.dagger:hilt-android:2.44"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07"
+    kapt "com.google.dagger:hilt-compiler:2.44"
     implementation "androidx.compose.ui:ui:1.4.3"
     implementation "androidx.compose.ui:ui-tooling-preview:1.4.3"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha02'
@@ -65,4 +76,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.3"
     debugImplementation "androidx.compose.ui:ui-tooling:1.4.3"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.3"
+}
+
+kapt {
+    correctErrorTypes true
 }
