--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.moviesappjetpack"
-        minSdk 21
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -21,11 +21,7 @@ android {
             useSupportLibrary true
         }
 
-        kapt {
-            arguments {
-                arg("dagger.hilt.android.entryPoint", "com.example.moviesappjetpack.MyApp")
-            }
-        }
+
 
     }
 
@@ -62,9 +58,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'io.github.cdimascio:dotenv-kotlin:6.4.1'
-    implementation "com.google.dagger:hilt-android:2.44"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07"
+    //Dagger - Hilt
+    implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
     implementation "androidx.compose.ui:ui:1.4.3"
     implementation "androidx.compose.ui:ui-tooling-preview:1.4.3"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha02'
